# langgraph-state-machine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: 01_basic_sections.py  02_auto_transitions.py  03_per_section_llm.py
section_flow/: __init__.py  config.py  manager.py  middleware.py  state.py  tools.py  types.py  utils.py
tests/: test_config.py  test_manager.py  test_middleware.py  test_tools.py
