[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph-state-machine"
version = "0.1.0"
description = "Section-based flow control middleware for LangGraph React agents"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = [
    "langchain",
    "langgraph",
    "middleware",
    "agent",
    "state-machine",
    "flow-control",
    "react-agent",
    "llm",
    "workflow",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain>=1.0.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "langchain-openai>=0.2.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/mahmoud6611/langgraph-state-machine"
Issues = "https://github.com/mahmoud6611/langgraph-state-machine/issues"

[tool.hatch.build.targets.wheel]
packages = ["section_flow"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
